--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DECOR DREAMS  - Transforming Events into Experiences</title>
+    <title>DECOR DREAMS</title>
+    <!-- Google Fonts: Montserrat -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -12,11 +14,11 @@
         }
 
         body {
-            font-family: 'Georgia', serif;
-            color: #e0e0e0;
+            font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+            color: #222222;
+            background-color: #faf7f4;
             line-height: 1.6;
             overflow-x: hidden;
-            background: #0a0a0a;
         }
 
         /* Navigation */
@@ -165,19 +167,22 @@
 
         .section-title {
             text-align: center;
-            font-size: 3rem;
+            font-size: 40px;
             margin-bottom: 1rem;
-            color: #D4AF37;
-            font-weight: 300;
-            letter-spacing: 2px;
+            color: #c59b7c;
+            font-weight: 500;
+            letter-spacing: 0.08em;
+            text-transform: uppercase;
         }
 
         .section-subtitle {
             text-align: center;
-            font-size: 1.2rem;
-            color: #999;
+            font-size: 16px;
+            color: #555555;
             margin-bottom: 4rem;
             font-style: italic;
+            letter-spacing: 0.18em;
+            text-transform: uppercase;
         }
 
         /* Masonry Grid Layout */
@@ -376,7 +381,7 @@
             border: 1px solid rgba(212, 175, 55, 0.3);
             border-radius: 8px;
             color: #e0e0e0;
-            font-family: 'Georgia', serif;
+            font-family: 'Roboto', serif;
             font-size: 0.95rem;
             transition: all 0.3s;
         }
@@ -613,7 +618,7 @@
             <h2>Decorate your Dreams Stage Design & Decor</h2>
             <h1>From Concept to Creation</h1>
             <p>Let us transform your stage into a masterpiece</p>
-            <a href="https://wa.me/16479824693?text=Hi!%20I%20would%20like%20to%20inquire%20about%20decor%20dreams%20." class="cta-button" target="_blank">Get Started</a>
+            <a href="get_started.html" class="cta-button">Get Started</a>
         </div>
     </section>
 
