--- a/get_started.html
+++ b/get_started.html
@@ -214,7 +214,7 @@ document.getElementById('quoteForm').addEventListener('submit', function(e) {
     const form = this;
     const messageDiv = document.getElementById('form-message');
     messageDiv.textContent = '';
-    emailjs.sendForm('decordreams2025dec', 'template_4raw0yu', form)
+    emailjs.sendForm('decordreams2025', 'template_4raw0yu', form)
         .then(function() {
             messageDiv.style.color = 'green';
             messageDiv.textContent = 'Thank you! Your request has been sent.';
