--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('https://images.unsplash.com/photo-1464366400600-7168b8af9bc3?w=800') center/cover;
+            background: url('./images/st1.png') center/cover;
             filter: blur(8px);
             transform: scale(1.1);
             z-index: -2;
@@ -631,17 +631,17 @@
             <!-- Featured Large Images -->
             <div class="featured-work">
                 <div class="featured-item">
-                    <img src="https://images.unsplash.com/photo-1519167758481-83f29da8fd36?w=800" alt="Elegant wedding stage">
+                    <img src="./images/st1.png" alt="Elegant wedding stage">
                 </div>
                 <div class="featured-item">
-                    <img src="https://images.unsplash.com/photo-1464366400600-7168b8af9bc3?w=800" alt="Elegant event decor">
+                    <img src="./images/st2.png" alt="Elegant event decor">
                 </div>
             </div>
 
             <!-- Gallery Grid -->
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1478146896981-b80fe463b330?w=600" alt="Floral stage backdrop">
+                    <img src="./images/st3.png" alt="Floral stage backdrop">
                     <div class="gallery-overlay">
                         <h3 class="gallery-title">Grand Floral Stage</h3>
                         <p class="gallery-description">Luxurious floral arrangements with premium lighting</p>
@@ -649,7 +649,7 @@
                 </div>
 
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1505236858219-8359eb29e329?w=600" alt="Modern stage design">
+                    <img src="./images/st4.png" alt="Modern stage design">
                     <div class="gallery-overlay">
                         <h3 class="gallery-title">Modern Elegance</h3>
                         <p class="gallery-description">Contemporary design with sophisticated draping</p>
@@ -657,7 +657,7 @@
                 </div>
 
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1511795409834-ef04bbd61622?w=600" alt="Crystal decor stage">
+                    <img src="./images/st5.png" alt="Crystal decor stage">
                     <div class="gallery-overlay">
                         <h3 class="gallery-title">Crystal Chandelier Setup</h3>
                         <p class="gallery-description">Opulent design with crystal elements</p>
@@ -665,7 +665,7 @@
                 </div>
 
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1469371670807-013ccf25f16a?w=600" alt="Romantic stage backdrop">
+                    <img src="./images/st6.png" alt="Romantic stage backdrop">
                     <div class="gallery-overlay">
                         <h3 class="gallery-title">Romantic Backdrop</h3>
                         <p class="gallery-description">Soft lighting and elegant fabric draping</p>
@@ -673,7 +673,7 @@
                 </div>
 
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1523438097201-512ae7d59c44?w=600" alt="Royal stage decor">
+                    <img src="./images/st7.png" alt="Royal stage decor">
                     <div class="gallery-overlay">
                         <h3 class="gallery-title">Royal Affair</h3>
                         <p class="gallery-description">Regal setup with ornate details</p>
@@ -681,7 +681,7 @@
                 </div>
 
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1530023367847-a683933f4172?w=600" alt="Garden theme stage">
+                    <img src="./images/st8.png" alt="Garden theme stage">
                     <div class="gallery-overlay">
                         <h3 class="gallery-title">Garden Paradise</h3>
                         <p class="gallery-description">Fresh florals and natural elements</p>
@@ -692,10 +692,10 @@
             <!-- More Featured Images -->
             <div class="featured-work">
                 <div class="featured-item">
-                    <img src="https://images.unsplash.com/photo-1507676184212-d03ab07a01bf?w=800" alt="Glamorous stage setup">
+                    <img src="./images/st1.png" alt="Glamorous stage setup">
                 </div>
                 <div class="featured-item">
-                    <img src="https://images.unsplash.com/photo-1522413452208-996ff3f3e740?w=800" alt="Traditional decor stage">
+                    <img src="./images/st2.png" alt="Traditional decor stage">
                 </div>
             </div>
 
