--- a/index.html
+++ b/index.html
@@ -818,20 +818,18 @@
     <section class="cta-section">
         <h2 class="section-title">Follow Us on Instagram</h2>
         <p>Check out our latest work and get inspired</p>
-        <a href="#" class="cta-button" style="display: inline-block; margin-top: 1rem;">@DECOR DREAMSStageDecor</a>
+        <a href="#" class="cta-button" style="display: inline-block; margin-top: 1rem;">DM Decor Dreams</a>
     </section>
 
     <!-- Footer -->
     <footer id="contact">
         <p>Ready to transform your stage?</p>
         <p><strong>Contact us today for a consultation</strong></p>
-        <p>Email: info@DECOR DREAMSstagedecor.com | Phone: (555) 123-4567</p>
+        <p>Email: info@decor-dreams.ca | Phone: (647) 964-9163</p>
         <div class="footer-links">
-            <a href="#">Instagram</a>
-            <a href="#">Facebook</a>
-            <a href="#">Pinterest</a>
+            <a href="https://www.instagram.com/decordreams_gta?igsh=MXRlOHVvb2wyNmt0OA==">Instagram</a>
         </div>
-        <p style="margin-top: 2rem; opacity: 0.7;">© 2024 DECOR DREAMS . All rights reserved.</p>
+        <p style="margin-top: 2rem; opacity: 0.7;">© 2026 DECOR DREAMS . All rights reserved.</p>
 
 
     </footer>
