--- a/index.html
+++ b/index.html
@@ -799,17 +799,17 @@
         <div class="testimonial-grid">
             <div class="testimonial">
                 <p>DECOR DREAMS  was extremely professional, easy to communicate with, and friendly to work with! Their decor left all our guests asking for their name and contact information because it was that stunning and unique!</p>
-                <div class="testimonial-author">— Sarah M.</div>
+                <div class="testimonial-author">— Lulu Fathi.</div>
             </div>
             
             <div class="testimonial">
                 <p>I hired DECOR DREAMS  for my event and they did an absolutely amazing job with everything. They brought my vision boards to life and exceeded my expectations. The team was very accommodating and helpful.</p>
-                <div class="testimonial-author">— Michael T.</div>
+                <div class="testimonial-author">— Favas.</div>
             </div>
             
             <div class="testimonial">
                 <p>I highly recommend DECOR DREAMS to anyone who is looking to make their vision come alive. They provide quality work at great prices. I had a wonderful experience with their team.</p>
-                <div class="testimonial-author">— Jessica L.</div>
+                <div class="testimonial-author">— Anna M.</div>
             </div>
         </div>
     </section>
@@ -818,7 +818,7 @@
     <section class="cta-section">
         <h2 class="section-title">Follow Us on Instagram</h2>
         <p>Check out our latest work and get inspired</p>
-        <a href="#" class="cta-button" style="display: inline-block; margin-top: 1rem;">DM Decor Dreams</a>
+        <a href="https://wa.me/16479649163?text=Hi%20Decor%20Dreams%2C%20I%27m%20interested%20in%20your%20stage%20decor%20services!" class="cta-button" style="display: inline-block; margin-top: 1rem;" target="_blank" rel="noopener">DM Decor Dreams</a>
     </section>
 
     <!-- Footer -->
